app/src/main/java/com/example/darkfox/trainingnotes/models/errors/FirestoreExceptionCreatingAccountDoc.kt
package com.example.darkfox.trainingnotes.models.errors

class FirestoreExceptionCreatingAccountDoc(val failCause:String) : Exception(failCause) {
}